test/types/type_variables/jplevyak/where-3-error.good
Error: Unresolved call 'f(t=float, 1)' (where-3-error.chpl:5)
Candidates are:
  f(type t, x: any) (where-3-error.chpl:1)
